--- a/basic.ipynb
+++ b/basic.ipynb
@@ -467,10 +467,307 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 파이썬은 증감연산자가 존재하지 않음\n",
+    "\n",
+    "증감을 표현하고 싶으면 변수 += 1, 변수 -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "175"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable += 3\n",
+    "variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열\n",
+    "\n",
+    "- 출력 : print() 함수로 출력\n",
+    "- 문자열 연산 : + 연결, * 반복\n",
+    "- 타 데이터 타입과 연결 : 반드시 타 데이터 타입을 str() 형변환 함수로 변형 후 연결해야 함\n",
+    "- 문자열 : '혹은 \"로 묶어서 표현, \\n 으로 줄바꿈 가능\n",
+    "- 여러줄의 문자열 : ''' 혹은 \"\"\"로 표현\n",
+    "- 문자열 치환 : .replace() 문자열 메서드로 특정 문자열을 변경 가능\n",
+    "- f문자열 : 문자열 앞에 f라는 키워드를 붙여서 문자열의 포멧을 만들어 사용 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문자열\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('문자열')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문자열1\n",
+      "문자열2\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = '문자열1'\n",
+    "print(string1)\n",
+    "string2 = '문자열2'\n",
+    "print(string2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024.07.18'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = '2024-07-18'\n",
+    "date = date.replace('-', '.')\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이성계의 나이는 56입니다.\n",
+      "이성계의 나이는 56입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = '이성계'\n",
+    "age = 56\n",
+    "\n",
+    "print(str(name) + '의 나이는 ' + str(age) + '입니다.')\n",
+    "print(f'{name}의 나이는 {age}입니다.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'문자열1문자열2'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 + string2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'문자열1문자열1문자열1문자열1문자열1'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integer = 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0000000000000000abcd'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{'abcd':0>20}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[88], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstring1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43minteger\u001b[49m \u001b[38;5;241m+\u001b[39m string2\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "string1 + integer + string2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### NaN. Inf\n",
     "\n",
     "- NaN (Not a Number) : 숫자가 아님을 나타냄\n",
     "- Inf (Infinity) : 무한대"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'문자열110문자열2'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 + str(integer) + string2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요\n",
+      "반갑습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('안녕하세요\\n반갑습니다')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "안녕하세요\n",
+      "반갑습니다\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "statement = '''\n",
+    "안녕하세요\n",
+    "반갑습니다\n",
+    "'''\n",
+    "print(statement)"
    ]
   },
   {
