--- a/controll.ipynb
+++ b/controll.ipynb
@@ -133,6 +133,343 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 반복문\n",
+    "```python\n",
+    "for 변수 in range(반복횟수):\n",
+    "    반복할 구문\n",
+    "```\n",
+    "\n",
+    "- range(정수) : 0부터 매개변수로 전달할 정수-1까지의 정수 리스트를 반환\n",
+    "- range(시작 정수, 종료 정수) : 시작 정수부터 종료 정수-1까지 정수 리스트를 반환\n",
+    "- range(시작 정수, 종료 정수, 차이 정수) : 시작 정수부터 종료 정수-1까지의 정수 리스트를 반환 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(5, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(5, 10, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, 8, 7, 6, 5, 4, 3, 2]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(10, 1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(10):\n",
+    "    print(item)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(10, 0, -1):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item1 : 0 / item2 : 0\n",
+      "item1 : 0 / item2 : 1\n",
+      "item1 : 0 / item2 : 2\n",
+      "item1 : 0 / item2 : 3\n",
+      "item1 : 0 / item2 : 4\n",
+      "item1 : 0 / item2 : 5\n",
+      "item1 : 0 / item2 : 6\n",
+      "item1 : 0 / item2 : 7\n",
+      "item1 : 0 / item2 : 8\n",
+      "item1 : 0 / item2 : 9\n",
+      "item1 : 1 / item2 : 0\n",
+      "item1 : 1 / item2 : 1\n",
+      "item1 : 1 / item2 : 2\n",
+      "item1 : 1 / item2 : 3\n",
+      "item1 : 1 / item2 : 4\n",
+      "item1 : 1 / item2 : 5\n",
+      "item1 : 1 / item2 : 6\n",
+      "item1 : 1 / item2 : 7\n",
+      "item1 : 1 / item2 : 8\n",
+      "item1 : 1 / item2 : 9\n",
+      "item1 : 2 / item2 : 0\n",
+      "item1 : 2 / item2 : 1\n",
+      "item1 : 2 / item2 : 2\n",
+      "item1 : 2 / item2 : 3\n",
+      "item1 : 2 / item2 : 4\n",
+      "item1 : 2 / item2 : 5\n",
+      "item1 : 2 / item2 : 6\n",
+      "item1 : 2 / item2 : 7\n",
+      "item1 : 2 / item2 : 8\n",
+      "item1 : 2 / item2 : 9\n",
+      "item1 : 3 / item2 : 0\n",
+      "item1 : 3 / item2 : 1\n",
+      "item1 : 3 / item2 : 2\n",
+      "item1 : 3 / item2 : 3\n",
+      "item1 : 3 / item2 : 4\n",
+      "item1 : 3 / item2 : 5\n",
+      "item1 : 3 / item2 : 6\n",
+      "item1 : 3 / item2 : 7\n",
+      "item1 : 3 / item2 : 8\n",
+      "item1 : 3 / item2 : 9\n",
+      "item1 : 4 / item2 : 0\n",
+      "item1 : 4 / item2 : 1\n",
+      "item1 : 4 / item2 : 2\n",
+      "item1 : 4 / item2 : 3\n",
+      "item1 : 4 / item2 : 4\n",
+      "item1 : 4 / item2 : 5\n",
+      "item1 : 4 / item2 : 6\n",
+      "item1 : 4 / item2 : 7\n",
+      "item1 : 4 / item2 : 8\n",
+      "item1 : 4 / item2 : 9\n",
+      "item1 : 5 / item2 : 0\n",
+      "item1 : 5 / item2 : 1\n",
+      "item1 : 5 / item2 : 2\n",
+      "item1 : 5 / item2 : 3\n",
+      "item1 : 5 / item2 : 4\n",
+      "item1 : 5 / item2 : 5\n",
+      "item1 : 5 / item2 : 6\n",
+      "item1 : 5 / item2 : 7\n",
+      "item1 : 5 / item2 : 8\n",
+      "item1 : 5 / item2 : 9\n",
+      "item1 : 6 / item2 : 0\n",
+      "item1 : 6 / item2 : 1\n",
+      "item1 : 6 / item2 : 2\n",
+      "item1 : 6 / item2 : 3\n",
+      "item1 : 6 / item2 : 4\n",
+      "item1 : 6 / item2 : 5\n",
+      "item1 : 6 / item2 : 6\n",
+      "item1 : 6 / item2 : 7\n",
+      "item1 : 6 / item2 : 8\n",
+      "item1 : 6 / item2 : 9\n",
+      "item1 : 7 / item2 : 0\n",
+      "item1 : 7 / item2 : 1\n",
+      "item1 : 7 / item2 : 2\n",
+      "item1 : 7 / item2 : 3\n",
+      "item1 : 7 / item2 : 4\n",
+      "item1 : 7 / item2 : 5\n",
+      "item1 : 7 / item2 : 6\n",
+      "item1 : 7 / item2 : 7\n",
+      "item1 : 7 / item2 : 8\n",
+      "item1 : 7 / item2 : 9\n",
+      "item1 : 8 / item2 : 0\n",
+      "item1 : 8 / item2 : 1\n",
+      "item1 : 8 / item2 : 2\n",
+      "item1 : 8 / item2 : 3\n",
+      "item1 : 8 / item2 : 4\n",
+      "item1 : 8 / item2 : 5\n",
+      "item1 : 8 / item2 : 6\n",
+      "item1 : 8 / item2 : 7\n",
+      "item1 : 8 / item2 : 8\n",
+      "item1 : 8 / item2 : 9\n",
+      "item1 : 9 / item2 : 0\n",
+      "item1 : 9 / item2 : 1\n",
+      "item1 : 9 / item2 : 2\n",
+      "item1 : 9 / item2 : 3\n",
+      "item1 : 9 / item2 : 4\n",
+      "item1 : 9 / item2 : 5\n",
+      "item1 : 9 / item2 : 6\n",
+      "item1 : 9 / item2 : 7\n",
+      "item1 : 9 / item2 : 8\n",
+      "item1 : 9 / item2 : 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item1 in range(10):\n",
+    "    for item2 in range(10):\n",
+    "        print(f'item1 : {item1} / item2 : {item2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******************\n",
+      "******************\n",
+      "*****************\n",
+      "****************\n",
+      "***************\n",
+      "**************\n",
+      "*************\n",
+      "************\n",
+      "***********\n",
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(1, 20):\n",
+    "    print('*' * (20 - count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "********\n",
+      "*********\n",
+      "**********\n",
+      "***********\n",
+      "************\n",
+      "*************\n",
+      "**************\n",
+      "***************\n",
+      "**************\n",
+      "*************\n",
+      "************\n",
+      "***********\n",
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "BASE_COUNT = 30\n",
+    "START = 1\n",
+    "CHARACTER = '*'\n",
+    "\n",
+    "for count in range(START, BASE_COUNT):\n",
+    "    if(count <= (BASE_COUNT/2)):\n",
+    "        print(CHARACTER * count)\n",
+    "    else:\n",
+    "        print('*' * (BASE_COUNT - count))    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
