--- a/structure.ipynb
+++ b/structure.ipynb
@@ -553,6 +553,171 @@
     "fruits['banana'] = '버네이너'\n",
     "fruits"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 딕셔너리에 요소 추가\n",
+    "```python\n",
+    "딕셔너리{추가할 키} = 추가할 값\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits['damson'] = '자두'\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'add_fruits' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fruits\u001b[38;5;241m.\u001b[39mupdate(\u001b[43madd_fruits\u001b[49m)\n\u001b[0;32m      2\u001b[0m fruits\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'add_fruits' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.update(add_fruits)\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 딕셔너리에서 요소 삭제\n",
+    "```python\n",
+    "del 요소\n",
+    "pop(키)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': '사과', 'banana': '버네이너'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del fruits['carrot']\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': '사과'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits.pop('banana')\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 딕셔너리를 반복문에 사용\n",
+    "```python\n",
+    "for key in 딕셔너리.keys():\n",
+    "    반복 구문\n",
+    "\n",
+    "for value in 딕셔너리.values():\n",
+    "    반복 구문\n",
+    "\n",
+    "for key, value in 딕셔너리.items():\n",
+    "    반복구문\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in fruits.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for value in fruits.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple - 사과\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in fruits.items():\n",
+    "    print(f'{key} - {value}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
