--- a/structure.ipynb
+++ b/structure.ipynb
@@ -534,66 +534,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'apple': '사과', 'banana': '버네이너', 'carrot': '당근'}"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fruits['banana'] = '버네이너'\n",
-    "fruits"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 딕셔너리에 요소 추가\n",
+    "##### 딕셔너리에 요소 추가 및 수정\n",
     "```python\n",
     "딕셔너리{추가할 키} = 추가할 값\n",
+    "딕셔너리{수정할 키} = 수정할 값\n",
+    "딕셔너리.update(딕셔너리)\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruits['damson'] = '자두'\n",
-    "fruits"
+    "fruits['damson'] = '자두'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'add_fruits' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fruits\u001b[38;5;241m.\u001b[39mupdate(\u001b[43madd_fruits\u001b[49m)\n\u001b[0;32m      2\u001b[0m fruits\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'add_fruits' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'banana': '버네이너', 'eggfruit': '에그프루트'}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fruits.update(add_fruits)\n",
-    "fruits"
+    "add_fruits = {\n",
+    "\n",
+    "    'banana': '버네이너' ,\n",
+    "    'eggfruit': '에그프루트'\n",
+    "}\n",
+    "add_fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': '사과',\n",
+       " 'carrot': '당근',\n",
+       " 'demson': '자두',\n",
+       " 'banana': '버네이너',\n",
+       " 'eqqfruit': '에그프루트',\n",
+       " 'damson': '자두',\n",
+       " 'eggfruit': '에그프루트'}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits.update(add_fruits)\n"
    ]
   },
   {
@@ -609,16 +618,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'apple': '사과', 'banana': '버네이너'}"
+       "{'apple': '사과',\n",
+       " 'demson': '자두',\n",
+       " 'banana': '버네이너',\n",
+       " 'eqqfruit': '에그프루트',\n",
+       " 'damson': '자두',\n",
+       " 'eggfruit': '에그프루트'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,16 +644,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'apple': '사과'}"
+       "{'apple': '사과',\n",
+       " 'demson': '자두',\n",
+       " 'eqqfruit': '에그프루트',\n",
+       " 'damson': '자두',\n",
+       " 'eggfruit': '에그프루트'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,14 +686,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple\n"
+      "apple\n",
+      "demson\n",
+      "eqqfruit\n",
+      "damson\n",
+      "eggfruit\n"
      ]
     }
    ],
@@ -686,9 +708,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사과\n",
+      "자두\n",
+      "에그프루트\n",
+      "자두\n",
+      "에그프루트\n"
+     ]
+    }
+   ],
    "source": [
     "for value in fruits.values():\n",
     "    print(value)"
@@ -696,14 +730,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple - 사과\n"
+      "apple - 사과\n",
+      "demson - 자두\n",
+      "eqqfruit - 에그프루트\n",
+      "damson - 자두\n",
+      "eggfruit - 에그프루트\n"
      ]
     }
    ],
@@ -711,13 +749,6 @@
     "for key, value in fruits.items():\n",
     "    print(f'{key} - {value}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
